--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -18,7 +18,7 @@
         </a>
       </li>
       <li>
-        <a href="{% url 'new_assessment' %}" 
+        <a href="{% url 'assessments_overview' %}" 
            class="nav-link {% if section == 'assessment' %}active{% endif %}">
           <i data-lucide="clipboard-list"></i> Assessments
         </a>
