--- a/apps/dashboard/templates/dashboard/home.html
+++ b/apps/dashboard/templates/dashboard/home.html
@@ -5,9 +5,10 @@
 
 {% block content %}
 <div class="main-heading">
-  <h1>Your Dashboard</h2>
-  <a href="{% url 'new_assessment' %}" class="button">New Assessment</a>
-  </div>
+  <h1>Dashboard</h1>
+  <a href="{% url 'new_assessment' %}" class="button--primary">New Assessment</a>
+</div>
+
 <div class="dashboard-grid">
   {% include "dashboard/includes/recent_assessments.html" %}
   <div class="dashboard-bottom">
