Add Assessment overview page, combine previous views for team lists

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -24,8 +24,8 @@
         </a>
       </li>
       <li>
-        <a href="{% url 'team_list' %}" 
-           class="nav-link {% if section == 'teams' %}active{% endif %}">
+        <a href="{% url 'teams_overview' %}" 
+          class="nav-link {% if section == 'teams' %}active{% endif %}">
           <i data-lucide="users"></i> Teams
         </a>
       </li>
