--- a/apps/dashboard/templates/dashboard/includes/teams_list.html
+++ b/apps/dashboard/templates/dashboard/includes/teams_list.html
@@ -1,23 +1,27 @@
 <div class="dashboard-section">
-    <div class="section-header">
-        <h2>Your Teams</h2>
-        <a href="{% url 'new_assessment' %}" class="unstyled-link">See All</a>
-    </div>
+  <div class="section-header">
+    <h2>Your Teams</h2>
+    <a href="{% url 'teams_overview' %}" class="unstyled-link">See All</a>
+  </div>
 
-    <div class="card">
-        {% if teams %}
-            <ul class="table-list">
-                {% for team in teams %}
-                    <li class="table-row">
-                    <span class="row-left">{{ team.name }}</span>
-                    <span class="row-right">
-                        <a href="{% url 'team_detail' team.id %}" class="row-button">Details</a>
-                    </span>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <p>No teams yet. <a href="{% url 'list' %}">Create one</a>.</p>
-        {% endif %}
-    </div>
+  <div class="card">
+    {% if teams %}
+      <ul class="table-list">
+        {% for team in teams %}
+          <li class="table-row">
+            <span class="row-left">{{ team.name }}</span>
+            <span class="row-right">
+              <!-- link into the overview, scoping to this team -->
+              <a 
+                href="{% url 'teams_overview' %}?team={{ team.id }}" 
+                class="row-button"
+              >Details</a>
+            </span>
+          </li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p>No teams yet. <a href="{% url 'teams_overview' %}">Create one</a>.</p>
+    {% endif %}
+  </div>
 </div>
