--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,8 +10,9 @@
   /* Default theme */
   --bg: white;
   --bg-accent: AliceBlue;
-  --text: #393446;
+  --text: #373d48;
   --text-light: #6C7581;
+  --text-xlight: #9ba3af;
   --border: #d3dce8;
   --primary: rgba(0, 147, 237); /* #0093ED in hex */
   --secondary: #b5eaea;
@@ -216,7 +217,6 @@ h3 {
   color: var(--text-light);
   margin-top: 2rem;
   margin-bottom: 0.5rem;
-  text-transform: uppercase;
   letter-spacing: 0.05em;
 }
 
@@ -226,27 +226,24 @@ h3 {
   margin: 0;
 }
 
-.sidebar-nav i[data-lucide] {
-  width: 18px;
-  height: 18px;
-  stroke: var(--text-light); /* light gray default */
-  margin-right: 0.5rem;
+.sidebar-nav .nav-link svg[data-lucide] {
+  width: 1rem; 
+  height: 1rem;
+  stroke: var(--text-xlight); 
+  margin-right: 0.2rem;
   transition: stroke 0.2s ease;
 }
 
 .nav-link {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.6rem;
   padding: 0.5rem 1rem;
   text-decoration: none;
-  color: var(--text-light); /* light gray text by default */
+  color: var(--text-xlight); 
+  font-size: 1rem;
   border-radius: 6px;
   transition: all 0.2s ease;
-}
-
-.nav-link i[data-lucide] {
-  stroke: var(--text-light); /* gray icons by default */
 }
 
 .nav-link:hover,
@@ -255,8 +252,8 @@ h3 {
   color: var(--primary);
 }
 
-.nav-link:hover i[data-lucide],
-.nav-link.active i[data-lucide] {
+.nav-link:hover svg[data-lucide],
+.nav-link.active svg[data-lucide] {
   stroke: var(--primary); /* blue icons on hover or active */
 }
 
