--- a/apps/teams/templates/teams/_member_table.html
+++ b/apps/teams/templates/teams/_member_table.html
@@ -1,37 +1,41 @@
 {% if team %}
   <h3>Team Members in {{ team.name }}</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for member in team.members.all %}
+  <div class="table-wrapper">
+    <table class="table">
+      <thead>
         <tr>
-          <form method="post">
-            {% csrf_token %}
-            <td>
-              <input type="text" name="edit_member_name" value="{{ member.name }}" required>
-            </td>
-            <td>
-              <input type="email" name="edit_member_email" value="{{ member.email }}" required>
-            </td>
-            <td>
-              <input type="hidden" name="member_id" value="{{ member.id }}">
-              <button type="submit" name="edit_member">Update</button>
-              <button type="submit" name="delete_member" onclick="return confirm('Are you sure you want to delete this member?')">Delete</button>
-            </td>
-          </form>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Actions</th>
         </tr>
-      {% empty %}
-        <tr><td colspan="3">No members yet.</td></tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
+      </thead>
+      <tbody>
+        {% for member in team.members.all %}
+          <tr>
+            <form method="post">
+              {% csrf_token %}
+              <td>
+                <input type="text" name="edit_member_name" value="{{ member.name }}" required>
+              </td>
+              <td>
+                <input type="email" name="edit_member_email" value="{{ member.email }}" required>
+              </td>
+              <td class="text-right">
+                <input type="hidden" name="member_id" value="{{ member.id }}">
+                <button type="submit" name="edit_member" class="text-button">Update</button>
+                &nbsp;|&nbsp;
+                <button type="submit" name="delete_member" class="text-button" 
+                  onclick="return confirm('Are you sure you want to delete this member?')">Delete
+                </button>
+              </td>
+            </form>
+          </tr>
+        {% empty %}
+          <tr><td colspan="3">No members yet.</td></tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
   <hr>
 
   <h4>Add New Member</h4>
