Update font sizes, form styles, fix sidebar flex issue

--- a/apps/teams/templates/teams/overview.html
+++ b/apps/teams/templates/teams/overview.html
@@ -46,7 +46,7 @@
             >{{ t.name }}</option>
           {% endfor %}
         </select>
-        <button type="submit" name="edit_team" class="button--secondary">
+        <button type="submit" name="edit_team">
           Go
         </button>
       </div>
