--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -17,7 +17,7 @@
 
     <main class="public-container">
       <div class="public-box">
-        <h2 class="text-center">{% block page_heading %}{% endblock %}</h2>
+        {% block page_heading %}{% endblock %}
         {% block content %}{% endblock %}
       </div>
     </main>
